--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
     <tr>
       <th scope="col">Short URL</th>
       <th scope="col">Long URL</th>
+      <th scope="col">Edit URL</th>
       <th scope="col">Delete URL</th>
     </tr>
   </thead>
@@ -25,7 +26,8 @@
       <tr>
         <td><a href="#"><%= url %></a></td>
         <td><%= urls[url] %></td>
-        <td><form method="POST" action='/urls/<%= url %>/delete'><button type="submit" class="btn btn-default">Delete</button></form></td>
+        <td><form method="GET" action='/urls/<%= url %>'><button type="submit" class="btn btn-outline-warning">Edit</button></form></td>
+        <td><form method="POST" action='/urls/<%= url %>/delete'><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
       </tr>
     <% } %>
   </tbody>
