--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,6 @@
 <header>
+
+  
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +10,36 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
-    </div>
+        <!-- <ul class="nav navbar-nav navbar-right">
+          <li> -->
+  <% if (username) { %>
+    <h4>Logged in as: <%= username %> </h4>
+    <form method="POST" action='/logout'> 
+      <button type="submit" class="btn btn-default">Logout</button></form>
+          
+           <% } else { %>
+           
+              <form method="POST" action='/login' >
+                <input type="name" class="form-control navbar-form navbar-right" placeholder="Username" name="username">
+                <button type="submit" class="btn btn-default">Login</button></form>
+
+            <% } %>
+          <!-- </li> -->
+            <!-- <li> -->
+              
+            
+          <!-- </li></ul> -->
+          </div>
+
+
+      
+
   </nav>
 </header>
+<!-- 
+
+<% if(true){ %>
+  <h1>foo</h1>
+<% } else{ %>  
+  <h1>bar</h1>
+<% } %> -->
