--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,8 +10,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <!-- <ul class="nav navbar-nav navbar-right">
-          <li> -->
+        <a class="nav-item nav-link" href="/urls/register">Register</a>
+      
   <% if (username) { %>
     <h4>Logged in as: <%= username %> </h4>
     <form method="POST" action='/logout'> 
