added registration and login page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <a class="nav-item nav-link" href="/urls/register">Register</a>
+        
       
   <% if (username) { %>
     <h4>Logged in as: <%= username %> </h4>
@@ -19,9 +19,8 @@
           
            <% } else { %>
            
-              <form method="POST" action='/login' >
-                <input type="name" class="form-control navbar-form navbar-right" placeholder="Username" name="username">
-                <button type="submit" class="btn btn-default">Login</button></form>
+            <a class="nav-item nav-link" href="/urls/register">Register</a>
+            <a class="nav-item nav-link" href="/urls/login">Login</a>
 
             <% } %>
           <!-- </li> -->
