--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,8 +12,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         
       
-  <% if (username) { %>
-    <h4>Logged in as: <%= username %> </h4>
+  <% if (user) { %>
+    <h4>Logged in as: <%= user.email %> </h4>
     <form method="POST" action='/logout'> 
       <button type="submit" class="btn btn-default">Logout</button></form>
           
