fixed some stuff

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,11 +25,19 @@
     <% for(let url in urls) { %>
       <tr>
         <td><a href="#"><%= url %></a></td>
-        <td><%= urls[url] %></td>
+        <td><%= urls[url].longURL %></td>
         <td><form method="GET" action='/urls/<%= url %>'><button type="submit" class="btn btn-outline-warning">Edit</button></form></td>
         <td><form method="POST" action='/urls/<%= url %>/delete'><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
       </tr>
     <% } %>
+<!-- 
+    {
+      urls: {
+        b6UTxQ: { longURL: 'https://www.tsn.ca', userID: 'aJ48lW' },
+        i3BoGr: { longURL: 'https://www.google.ca', userID: 'aJ48lW' }
+      },
+      user: undefined
+    } -->
   </tbody>
 </table>
 </main>
